<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBlue"
    tools:context=".activities.IntroActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/appLogo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ecosync_logo_white" />

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/splash_screen_title_marginStart"
                android:text="@string/ecoSync"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivIllustration"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="@dimen/splash_screen_title_marginTop"
            android:src="@drawable/illustration" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_intro_text_margin"
            android:layout_marginEnd="@dimen/activity_intro_text_margin"
            android:gravity="center"
            android:text="@string/saving_watts_and_drops_the_smart_way"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_intro_slogan_text_size" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_intro_button_margin"
            android:background="@drawable/sign_up_button"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimaryBlue"
            android:textSize="@dimen/activity_intro_button_text_size"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_intro_button_margin"
            android:layout_marginEnd="@dimen/activity_intro_button_margin"
            android:background="@drawable/login_button"
            android:text="@string/log_in"
            android:textSize="@dimen/activity_intro_button_text_size" />

        <TextView
            android:id="@+id/tvTermsAndServices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_intro_text_margin"
            android:layout_marginTop="@dimen/activity_intro_text_margin"
            android:layout_marginEnd="@dimen/activity_intro_text_margin"
            android:gravity="center"
            android:text="@string/by_signing_up_you_agree_to_our_terms_of_services_and_privacy_policy"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_intro_terms_and_conditions_text_size" />

        <TextView
            android:id="@+id/tvContactUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_intro_text_margin"
            android:layout_marginEnd="@dimen/activity_intro_text_margin"
            android:gravity="center"
            android:text="@string/contact_us"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_intro_terms_and_conditions_text_size"
            android:textStyle="bold" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>