<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SignInActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_sign_in_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/sign_in"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/authentication_screen_content_marginTop"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
            android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
            android:gravity="center"
            android:text="@string/sign_up_description_text"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/authentication_description_text_size" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
            android:layout_marginTop="@dimen/authentication_screen_card_view_marginTop"
            android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
            android:elevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_view_layout_content_padding">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/et_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/btn_marginStartEnd"
                    android:layout_marginTop="@dimen/sign_up_screen_btn_marginTop"
                    android:layout_marginEnd="@dimen/btn_marginStartEnd"
                    android:background="@drawable/notification_button"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="@dimen/btn_paddingTopBottom"
                    android:paddingBottom="@dimen/btn_paddingTopBottom"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorPrimaryBlue"
                    android:textSize="@dimen/btn_text_size" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>
